# epftoolbox

./: .gitignore  README.md  agents.md  pyproject.toml  setup.py
.cursor/: README.md
.cursor/rules/: main.md  (+1 more)
Notebooks/: 01_load_data.ipynb  02_forecasting_models.ipynb  02_forecasting_models_LinuxMint.ipynb  02_forecasting_modelszRerun.ipynb  02_forecasting_oneshot-DNN-1year.ipynb  02_forecasting_oneshot.ipynb  03_canned_OneShot_Runs.ipynb  03_canned_OneShot_Runs_BE.ipynb  03_canned_OneShot_Runs_DE.ipynb  03_canned_OneShot_Runs_FR.ipynb  03_canned_OneShot_Runs_NP.ipynb  03_canned_OneShot_Runs_PJM.ipynb  03_fixed_window_demo.ipynb  04_TwoDays_OneShot_Runs_BE.ipynb  04_TwoDays_OneShot_Runs_DE.ipynb  04_TwoDays_OneShot_Runs_FR.ipynb  04_TwoDays_OneShot_Runs_NP.ipynb  04_TwoDays_OneShot_Runs_PJM.ipynb  05_collect_predictions.ipynb  06_template.ipynb
experimental_files/: 2025-12-15-backup-DNN_hyperparameters_nl3_datBE_YT2_SF_DA_CW4_oneshot_dnn  2025-12-15-backup2-DNN_hyperparameters_nl3_datNP_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl2_datPJM_YT2_SF_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datBE_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datDE_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datDE_YT2_SF_DA_CW4_oneshot_dnn-tmp  DNN_hyperparameters_nl3_datFR_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datNP_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datPJM_YT2_SF_DA_CW4_oneshot_dnn  DNN_hyperparameters_nl3_datPJM_YT5_SF_DA_CW1_oneshot_dnn
forecasts_local/: DNN_forecast_nl2_datPJM_YT2_SFHTrue_CW4_1.csv  DNN_forecast_nl2_datPJM_YT2_SFHTrue_CW4_oneshot_dnn.csv  DNN_hyperparameters_nl2_datPJM_YT2_SF_CW4_1  (+1 more)
(+20 files in other folders)
