[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epftoolbox"
version = "1.0"
description = "An open-access benchmark and toolbox for electricity price forecasting"
readme = "README.md"
requires-python = ">=3.9, <=3.13"
license = {text = "GNU AGPLv3"}
authors = [
    {name = "Jesus Lago", email = "jesuslagogarcia@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "hyperopt>=0.2",
    "tensorflow>=2.2",
    "scikit-learn>=0.22",
    "pandas>=1",
    "numpy>=1,<2",
    "statsmodels>=0.11",
    "matplotlib>=3",
    "scipy>=1.4",
    "keras>=2.15,<3",
]

[project.optional-dependencies]
# GPU support with compatible CUDA/cuDNN versions for TF 2.15
gpu = [
    "tensorflow[and-cuda]==2.15.*",
    "nvidia-cudnn-cu12>=8.9,<9.0",  # Pin cuDNN 8.x for TF 2.15 compatibility
]

# Development dependencies
dev = [
    "jupyter",
    "ipykernel",
    "setuptools<81",  # Quiet hyperopt warnings
]

[project.urls]
Homepage = "https://github.com/jeslago/epftoolbox"
Documentation = "https://epftoolbox.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
include = ["epftoolbox*"]
